--- a/pages/devLongues.html
+++ b/pages/devLongues.html
@@ -21,7 +21,7 @@
                             </p>
                             <h1 class="devlangues-card_subtitle">C#</h1>
 
-                            <a href="#" class="devlangues-btn">
+                            <a href="./start.html" class="devlangues-btn">
                                 <p class="devlangues-btn_title">Boshlash</p>
                                 <div class="icon">
                                     <svg width="25" height="25" viewBox="0 0 24 24" fill="none"
