--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     <div class="main-panel_top">
                         <h1 class="main-title">Terms</h1>
                         <p class="main-subtitle">Programming</p>
+                        <a class="main-btn" href="./pages/devLongues.html">Get</a>
                     </div>
-                    <a class="main-btn" href="./pages/devLongues.html">Login</a>
                 </div>
             </div>
         </div>  
