--- a/pages/devLongues.html
+++ b/pages/devLongues.html
@@ -103,38 +103,36 @@
                         </div>
                     </div>
 
-                    <div class="bottom-panel">
-                        <button class="bottom-panel_katalog-btn">
-                            <div class="bottom-panel_icon">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M13.27 19.48C12.457 20.293 12 21.395 12 22.545V23.5C12 23.776 12.224 24 12.5 24H13.455C14.604 24 15.707 23.543 16.519 22.731L23.234 16.016C24.084 15.166 24.247 13.78 23.486 12.849C22.611 11.779 21.03 11.72 20.077 12.673L13.27 19.48ZM8.152 14C9.135 14 10.072 14.359 10.798 15H13.202C13.928 14.359 14.866 14 15.848 14H15.921L18.662 11.259C19.519 10.401 20.717 9.94 21.916 10.005C21.944 10.006 21.971 10.016 21.999 10.018V8C21.999 5.243 19.756 3 16.999 3H7C4.243 3 2 5.243 2 8V14.11C2.323 14.043 2.656 14 3 14H8.151H8.152ZM13.25 5.793C13.641 5.402 14.273 5.402 14.664 5.793L16.345 7.474C17.217 8.346 17.217 9.764 16.345 10.635L14.692 12.221C14.294 12.603 13.661 12.59 13.278 12.192C12.896 11.794 12.909 11.16 13.307 10.778L14.945 9.206C15.022 9.129 15.022 8.979 14.93 8.888L13.249 7.207C12.858 6.816 12.858 6.184 13.249 5.793H13.25ZM7.652 7.474L9.333 5.793C9.724 5.402 10.356 5.402 10.747 5.793C11.138 6.184 11.138 6.816 10.747 7.207L9.066 8.888C8.974 8.98 8.974 9.129 9.066 9.221L10.69 10.778C11.088 11.16 11.102 11.794 10.719 12.192C10.336 12.591 9.703 12.603 9.305 12.221L7.667 10.649C6.781 9.763 6.781 8.346 7.652 7.474ZM10.197 21H2.5C1.119 21 0 19.881 0 18.5C0 17.119 1.119 16 2.5 16H8.151C8.74 16 9.298 16.259 9.678 16.708L9.925 17H12.922L11.856 18.066C11.033 18.888 10.472 19.899 10.197 21Z"
-                                        fill="#636363" />
-                                </svg>
-                            </div>
-                            <p class="button-panel_menyu-title">Dasturlash tillar</p>
-                        </button>
-                        <button class="bottom-panel_katalog-btn">
-                            <div class="bottom-panel_icon">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <g clip-path="url(#clip0_10_156)">
-                                        <path
-                                            d="M9 12C5.691 12 3 9.309 3 6C3 2.691 5.691 0 9 0C12.309 0 15 2.691 15 6C15 9.309 12.309 12 9 12ZM22.696 19.134L21.722 18.572C21.888 18.075 22 17.553 22 17C22 16.447 21.889 15.925 21.722 15.428L22.696 14.866C23.174 14.59 23.338 13.978 23.062 13.5C22.785 13.021 22.175 12.856 21.696 13.134L20.723 13.696C20.018 12.902 19.079 12.321 18 12.102V11.001C18 10.449 17.552 10.001 17 10.001C16.448 10.001 16 10.449 16 11.001V12.102C14.921 12.322 13.982 12.903 13.277 13.696L12.304 13.134C11.824 12.857 11.214 13.021 10.938 13.5C10.662 13.979 10.826 14.59 11.304 14.866L12.278 15.428C12.112 15.925 12 16.447 12 17C12 17.553 12.111 18.075 12.278 18.572L11.304 19.134C10.826 19.41 10.662 20.022 10.938 20.5C11.124 20.821 11.459 21 11.805 21C11.974 21 12.146 20.957 12.304 20.866L13.277 20.304C13.982 21.098 14.921 21.679 16 21.898V22.999C16 23.551 16.448 23.999 17 23.999C17.552 23.999 18 23.551 18 22.999V21.898C19.079 21.678 20.018 21.097 20.723 20.304L21.696 20.866C21.854 20.957 22.026 21 22.195 21C22.541 21 22.877 20.821 23.062 20.5C23.338 20.021 23.174 19.41 22.696 19.134ZM17 18.5C16.173 18.5 15.5 17.827 15.5 17C15.5 16.173 16.173 15.5 17 15.5C17.827 15.5 18.5 16.173 18.5 17C18.5 17.827 17.827 18.5 17 18.5ZM8 17C8 15.956 8.187 14.957 8.514 14.025C3.778 14.279 0 18.202 0 23C0 23.552 0.448 24 1 24H11.349C9.308 22.35 8 19.829 8 17Z"
-                                            fill="#636363" />
-                                    </g>
-                                    <defs>
-                                        <clipPath id="clip0_10_156">
-                                            <rect width="24" height="24" fill="white" />
-                                        </clipPath>
-                                    </defs>
-                                </svg>
-                            </div>
-                            <p class="button-panel_menyu-title">Dasturlash tillar</p>
-                        </button>
-                    </div>
                 </div>
+            </div>
+            <div class="bottom-panel">
+                <button class="bottom-panel_katalog-btn">
+                    <div class="bottom-panel_icon">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M13.27 19.48C12.457 20.293 12 21.395 12 22.545V23.5C12 23.776 12.224 24 12.5 24H13.455C14.604 24 15.707 23.543 16.519 22.731L23.234 16.016C24.084 15.166 24.247 13.78 23.486 12.849C22.611 11.779 21.03 11.72 20.077 12.673L13.27 19.48ZM8.152 14C9.135 14 10.072 14.359 10.798 15H13.202C13.928 14.359 14.866 14 15.848 14H15.921L18.662 11.259C19.519 10.401 20.717 9.94 21.916 10.005C21.944 10.006 21.971 10.016 21.999 10.018V8C21.999 5.243 19.756 3 16.999 3H7C4.243 3 2 5.243 2 8V14.11C2.323 14.043 2.656 14 3 14H8.151H8.152ZM13.25 5.793C13.641 5.402 14.273 5.402 14.664 5.793L16.345 7.474C17.217 8.346 17.217 9.764 16.345 10.635L14.692 12.221C14.294 12.603 13.661 12.59 13.278 12.192C12.896 11.794 12.909 11.16 13.307 10.778L14.945 9.206C15.022 9.129 15.022 8.979 14.93 8.888L13.249 7.207C12.858 6.816 12.858 6.184 13.249 5.793H13.25ZM7.652 7.474L9.333 5.793C9.724 5.402 10.356 5.402 10.747 5.793C11.138 6.184 11.138 6.816 10.747 7.207L9.066 8.888C8.974 8.98 8.974 9.129 9.066 9.221L10.69 10.778C11.088 11.16 11.102 11.794 10.719 12.192C10.336 12.591 9.703 12.603 9.305 12.221L7.667 10.649C6.781 9.763 6.781 8.346 7.652 7.474ZM10.197 21H2.5C1.119 21 0 19.881 0 18.5C0 17.119 1.119 16 2.5 16H8.151C8.74 16 9.298 16.259 9.678 16.708L9.925 17H12.922L11.856 18.066C11.033 18.888 10.472 19.899 10.197 21Z"
+                                fill="#636363" />
+                        </svg>
+                    </div>
+                    <p class="button-panel_menyu-title">Dasturlash tillar</p>
+                </button>
+                <button class="bottom-panel_katalog-btn">
+                    <div class="bottom-panel_icon">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_10_156)">
+                                <path
+                                    d="M9 12C5.691 12 3 9.309 3 6C3 2.691 5.691 0 9 0C12.309 0 15 2.691 15 6C15 9.309 12.309 12 9 12ZM22.696 19.134L21.722 18.572C21.888 18.075 22 17.553 22 17C22 16.447 21.889 15.925 21.722 15.428L22.696 14.866C23.174 14.59 23.338 13.978 23.062 13.5C22.785 13.021 22.175 12.856 21.696 13.134L20.723 13.696C20.018 12.902 19.079 12.321 18 12.102V11.001C18 10.449 17.552 10.001 17 10.001C16.448 10.001 16 10.449 16 11.001V12.102C14.921 12.322 13.982 12.903 13.277 13.696L12.304 13.134C11.824 12.857 11.214 13.021 10.938 13.5C10.662 13.979 10.826 14.59 11.304 14.866L12.278 15.428C12.112 15.925 12 16.447 12 17C12 17.553 12.111 18.075 12.278 18.572L11.304 19.134C10.826 19.41 10.662 20.022 10.938 20.5C11.124 20.821 11.459 21 11.805 21C11.974 21 12.146 20.957 12.304 20.866L13.277 20.304C13.982 21.098 14.921 21.679 16 21.898V22.999C16 23.551 16.448 23.999 17 23.999C17.552 23.999 18 23.551 18 22.999V21.898C19.079 21.678 20.018 21.097 20.723 20.304L21.696 20.866C21.854 20.957 22.026 21 22.195 21C22.541 21 22.877 20.821 23.062 20.5C23.338 20.021 23.174 19.41 22.696 19.134ZM17 18.5C16.173 18.5 15.5 17.827 15.5 17C15.5 16.173 16.173 15.5 17 15.5C17.827 15.5 18.5 16.173 18.5 17C18.5 17.827 17.827 18.5 17 18.5ZM8 17C8 15.956 8.187 14.957 8.514 14.025C3.778 14.279 0 18.202 0 23C0 23.552 0.448 24 1 24H11.349C9.308 22.35 8 19.829 8 17Z"
+                                    fill="#636363" />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_10_156">
+                                    <rect width="24" height="24" fill="white" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </div>
+                    <p class="button-panel_menyu-title">Dasturlash tillar</p>
+                </button>
             </div>
         </div>
     </div>
