--- a/pages/catalogThree.html
+++ b/pages/catalogThree.html
@@ -39,7 +39,7 @@
                     </div>
 
                     <div class="catalog-navigation">
-                        <a href="./catalogOne.html" class="catalog-btn">
+                        <a href="./catalogTwo.html" class="catalog-btn">
                             <svg width="36" height="36" viewBox="0 0 36 36" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
