--- a/pages/catalogFinesh.html
+++ b/pages/catalogFinesh.html
@@ -49,7 +49,7 @@
                     </div>
 
                     <div class="catalog-navigation">
-                        <a href="./start.html" class="catalog-btn catalog-btn_finish">Yaskunlash</a>
+                        <a href="./start.html" style="width: 100%;" class="catalog-btn catalog-btn_finish">Yaskunlash</a>
                         <a href="#" class="catalog-btn catalog-btn_finish">Testni boshlash</a>
                     </div>
                 </div>
