--- a/pages/catalogFour.html
+++ b/pages/catalogFour.html
@@ -39,17 +39,8 @@
                     </div>
 
                     <div class="catalog-navigation">
-                        <a href="./catalogThree.html" class="catalog-btn">
-                            <svg width="36" height="36" viewBox="0 0 36 36" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M12.9001 21.18L19.7851 28.065C20.0661 28.3443 20.4463 28.5012 20.8426 28.5012C21.2388 28.5012 21.619 28.3443 21.9001 28.065C22.0406 27.9255 22.1522 27.7596 22.2284 27.5768C22.3045 27.394 22.3438 27.198 22.3438 27C22.3438 26.802 22.3045 26.6059 22.2284 26.4231C22.1522 26.2403 22.0406 26.0744 21.9001 25.935L15.0001 19.065C14.8595 18.9255 14.7479 18.7596 14.6717 18.5768C14.5956 18.394 14.5564 18.198 14.5564 18C14.5564 17.802 14.5956 17.6059 14.6717 17.4231C14.7479 17.2403 14.8595 17.0744 15.0001 16.935L21.9001 10.065C22.1825 9.7845 22.342 9.40332 22.3434 9.00527C22.3448 8.60723 22.188 8.22492 21.9076 7.94247C21.6271 7.66001 21.2459 7.50054 20.8479 7.49913C20.4498 7.49773 20.0675 7.6545 19.7851 7.93497L12.9001 14.82C12.0574 15.6637 11.584 16.8075 11.584 18C11.584 19.1925 12.0574 20.3362 12.9001 21.18Z"
-                                    fill="white" />
-                            </svg>
-                        </a>
-                        <div class="catalog-display">
-                            <p><span class="catalog-ub">5</span><span class="catalog-up">/8</span></p>
-                        </div>
+                
+                        <a href="#" class="catalog-btn catalog-btn_finish">Testni boshlash</a> 
                         <a href="./catalogFive.html" class="catalog-btn">
                             <svg width="36" height="36" viewBox="0 0 36 36" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
