--- a/pages/catalogFinesh.html
+++ b/pages/catalogFinesh.html
@@ -48,8 +48,12 @@
                         <p class="catalog-bottom__title"><b>Dispose</b> — Resurslarni xotiradan bo‘shatish.</p>
                     </div>
 
+                    <style>
+                        
+                    </style>
+
                     <div class="catalog-navigation">
-                        <a href="./start.html" style="width: 100%;" class="catalog-btn catalog-btn_finish">Yaskunlash</a>
+                        <a href="./start.html" class="catalog-btn catalog-btn_finish">Yaskunlash</a>
                         <a href="#" class="catalog-btn catalog-btn_finish">Testni boshlash</a>
                     </div>
                 </div>
