--- a/pages/catalogFour.html
+++ b/pages/catalogFour.html
@@ -40,7 +40,7 @@
 
                     <div class="catalog-navigation">
                 
-                        <a href="#" class="catalog-btn catalog-btn_finish">Testni boshlash</a> 
+                        <a href="#" class="catalog-btn catalog-test">Testni boshlash</a> 
                         <a href="./catalogFive.html" class="catalog-btn">
                             <svg width="36" height="36" viewBox="0 0 36 36" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
