--- a/pages/devLongues.html
+++ b/pages/devLongues.html
@@ -38,7 +38,7 @@
                                 o’rganing</p>
                             <h1 class="devlangues-card_subtitle">Python</h1>
 
-                            <a href="#" class="devlangues-btn">
+                            <a href="./PyStart.html" class="devlangues-btn">
                                 <p class="devlangues-btn_title">Boshlash</p>
                                 <div class="icon">
                                     <svg width="25" height="25" viewBox="0 0 24 24" fill="none"
