--- a/pages/Py10.html
+++ b/pages/Py10.html
@@ -49,8 +49,8 @@
                     </style>
 
                     <div class="catalog-navigation">
-                        <a href="./start.html" class="catalog-btn catalog-btn_finish">Yaskunlash</a>
-                        <a href="#" class="catalog-btn catalog-btn_finish">Testni boshlash</a>
+                        <a href="./start.html" style="width: 50%;" class="catalog-btn catalog-btn_finish">Yakunlash</a>
+                        <a href="#" style="width: 50%;" class="catalog-btn catalog-btn_finish">Testni boshlash</a>
                     </div>
                 </div>
             </div>
