--- a/pages/devLongues.html
+++ b/pages/devLongues.html
@@ -119,6 +119,24 @@
                 <button class="bottom-panel_katalog-btn">
                     <div class="bottom-panel_icon">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_129_10)">
+                                <path
+                                    d="M11 9H0V19C0 21.757 2.243 24 5 24H11V9ZM8 18.5C8 19.878 6.879 21 5.5 21C4.409 21 3.404 20.315 3.058 19.333C2.873 18.812 3.146 18.241 3.666 18.057C4.188 17.872 4.76 18.146 4.942 18.666C4.998 18.823 5.249 18.999 5.5 18.999C5.775 18.999 6 18.775 6 18.499V17.499C6 17.223 5.775 16.999 5.5 16.999H4.5C3.673 16.999 3 16.326 3 15.499V13.499C3 12.672 3.673 11.999 4.5 11.999H7C7.553 11.999 8 12.447 8 12.999C8 13.551 7.553 13.999 7 13.999H5V14.999H5.5C6.879 14.999 8 16.121 8 17.499V18.5ZM0 7C0 4.243 2.243 2 5 2V1C5 0.448 5.447 0 6 0C6.553 0 7 0.448 7 1V2H17V1C17 0.448 17.447 0 18 0C18.553 0 19 0.448 19 1V2C21.757 2 24 4.243 24 7H0ZM19 14.5V18.5C19 18.776 18.775 19 18.5 19C18.225 19 18 18.776 18 18.5V14.5C18 14.224 18.225 14 18.5 14C18.775 14 19 14.224 19 14.5ZM13 9V24H19C21.757 24 24 21.757 24 19V9H13ZM21 18.5C21 19.878 19.879 21 18.5 21C17.121 21 16 19.878 16 18.5V14.5C16 13.122 17.121 12 18.5 12C19.879 12 21 13.122 21 14.5V18.5Z"
+                                    fill="#636363" />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_129_10">
+                                    <rect width="24" height="24" fill="white" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </div>
+                    <p class="button-panel_menyu-title">Natijalar</p>
+
+                </button>
+                <button class="bottom-panel_katalog-btn">
+                    <div class="bottom-panel_icon">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_10_156)">
                                 <path
                                     d="M9 12C5.691 12 3 9.309 3 6C3 2.691 5.691 0 9 0C12.309 0 15 2.691 15 6C15 9.309 12.309 12 9 12ZM22.696 19.134L21.722 18.572C21.888 18.075 22 17.553 22 17C22 16.447 21.889 15.925 21.722 15.428L22.696 14.866C23.174 14.59 23.338 13.978 23.062 13.5C22.785 13.021 22.175 12.856 21.696 13.134L20.723 13.696C20.018 12.902 19.079 12.321 18 12.102V11.001C18 10.449 17.552 10.001 17 10.001C16.448 10.001 16 10.449 16 11.001V12.102C14.921 12.322 13.982 12.903 13.277 13.696L12.304 13.134C11.824 12.857 11.214 13.021 10.938 13.5C10.662 13.979 10.826 14.59 11.304 14.866L12.278 15.428C12.112 15.925 12 16.447 12 17C12 17.553 12.111 18.075 12.278 18.572L11.304 19.134C10.826 19.41 10.662 20.022 10.938 20.5C11.124 20.821 11.459 21 11.805 21C11.974 21 12.146 20.957 12.304 20.866L13.277 20.304C13.982 21.098 14.921 21.679 16 21.898V22.999C16 23.551 16.448 23.999 17 23.999C17.552 23.999 18 23.551 18 22.999V21.898C19.079 21.678 20.018 21.097 20.723 20.304L21.696 20.866C21.854 20.957 22.026 21 22.195 21C22.541 21 22.877 20.821 23.062 20.5C23.338 20.021 23.174 19.41 22.696 19.134ZM17 18.5C16.173 18.5 15.5 17.827 15.5 17C15.5 16.173 16.173 15.5 17 15.5C17.827 15.5 18.5 16.173 18.5 17C18.5 17.827 17.827 18.5 17 18.5ZM8 17C8 15.956 8.187 14.957 8.514 14.025C3.778 14.279 0 18.202 0 23C0 23.552 0.448 24 1 24H11.349C9.308 22.35 8 19.829 8 17Z"
@@ -131,7 +149,7 @@
                             </defs>
                         </svg>
                     </div>
-                    <p class="button-panel_menyu-title">Dasturlash tillar</p>
+                    <p class="button-panel_menyu-title">Bosh sahifa</p>
                 </button>
             </div>
         </div>
