--- a/pages/start.html
+++ b/pages/start.html
@@ -130,6 +130,24 @@
                         <p class="button-panel_menyu-title">Dasturlash tillar</p>
                     </a>
                     <button class="bottom-panel_katalog-btn">
+                    <div class="bottom-panel_icon">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_129_10)">
+                                <path
+                                    d="M11 9H0V19C0 21.757 2.243 24 5 24H11V9ZM8 18.5C8 19.878 6.879 21 5.5 21C4.409 21 3.404 20.315 3.058 19.333C2.873 18.812 3.146 18.241 3.666 18.057C4.188 17.872 4.76 18.146 4.942 18.666C4.998 18.823 5.249 18.999 5.5 18.999C5.775 18.999 6 18.775 6 18.499V17.499C6 17.223 5.775 16.999 5.5 16.999H4.5C3.673 16.999 3 16.326 3 15.499V13.499C3 12.672 3.673 11.999 4.5 11.999H7C7.553 11.999 8 12.447 8 12.999C8 13.551 7.553 13.999 7 13.999H5V14.999H5.5C6.879 14.999 8 16.121 8 17.499V18.5ZM0 7C0 4.243 2.243 2 5 2V1C5 0.448 5.447 0 6 0C6.553 0 7 0.448 7 1V2H17V1C17 0.448 17.447 0 18 0C18.553 0 19 0.448 19 1V2C21.757 2 24 4.243 24 7H0ZM19 14.5V18.5C19 18.776 18.775 19 18.5 19C18.225 19 18 18.776 18 18.5V14.5C18 14.224 18.225 14 18.5 14C18.775 14 19 14.224 19 14.5ZM13 9V24H19C21.757 24 24 21.757 24 19V9H13ZM21 18.5C21 19.878 19.879 21 18.5 21C17.121 21 16 19.878 16 18.5V14.5C16 13.122 17.121 12 18.5 12C19.879 12 21 13.122 21 14.5V18.5Z"
+                                    fill="#636363" />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_129_10">
+                                    <rect width="24" height="24" fill="white" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </div>
+                    <p class="button-panel_menyu-title">Natijalar</p>
+
+                </button>
+                    <button class="bottom-panel_katalog-btn">
                         <div class="bottom-panel_icon">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_10_156)">
