--- a/pages/PyStart.html
+++ b/pages/PyStart.html
@@ -176,7 +176,7 @@
                                 </defs>
                             </svg>
                         </div>
-                        <p class="button-panel_menyu-title">Dasturlash tillar</p>
+                        <p class="button-panel_menyu-title">Bosh sahifa</p>
                     </button>
                 </div>
             </div>
