--- a/pages/devLongues.html
+++ b/pages/devLongues.html
@@ -114,7 +114,7 @@
                                 fill="#636363" />
                         </svg>
                     </div>
-                    <p class="button-panel_menyu-title">Dasturlash tillar</p>
+                    <p class="button-panel_menyu-title">Bosh sahifa</p>
                 </button>
                 <button class="bottom-panel_katalog-btn">
                     <div class="bottom-panel_icon">
@@ -149,7 +149,7 @@
                             </defs>
                         </svg>
                     </div>
-                    <p class="button-panel_menyu-title">Bosh sahifa</p>
+                    <p class="button-panel_menyu-title">Profil</p>
                 </button>
             </div>
         </div>
