--- a/pages/start.html
+++ b/pages/start.html
@@ -127,7 +127,7 @@
                                 <path d="M13.27 19.48C12.457 20.293 12 21.395 12 22.545V23.5C12 23.776 12.224 24 12.5 24H13.455C14.604 24 15.707 23.543 16.519 22.731L23.234 16.016C24.084 15.166 24.247 13.78 23.486 12.849C22.611 11.779 21.03 11.72 20.077 12.673L13.27 19.48ZM8.152 14C9.135 14 10.072 14.359 10.798 15H13.202C13.928 14.359 14.866 14 15.848 14H15.921L18.662 11.259C19.519 10.401 20.717 9.94 21.916 10.005C21.944 10.006 21.971 10.016 21.999 10.018V8C21.999 5.243 19.756 3 16.999 3H7C4.243 3 2 5.243 2 8V14.11C2.323 14.043 2.656 14 3 14H8.151H8.152ZM13.25 5.793C13.641 5.402 14.273 5.402 14.664 5.793L16.345 7.474C17.217 8.346 17.217 9.764 16.345 10.635L14.692 12.221C14.294 12.603 13.661 12.59 13.278 12.192C12.896 11.794 12.909 11.16 13.307 10.778L14.945 9.206C15.022 9.129 15.022 8.979 14.93 8.888L13.249 7.207C12.858 6.816 12.858 6.184 13.249 5.793H13.25ZM7.652 7.474L9.333 5.793C9.724 5.402 10.356 5.402 10.747 5.793C11.138 6.184 11.138 6.816 10.747 7.207L9.066 8.888C8.974 8.98 8.974 9.129 9.066 9.221L10.69 10.778C11.088 11.16 11.102 11.794 10.719 12.192C10.336 12.591 9.703 12.603 9.305 12.221L7.667 10.649C6.781 9.763 6.781 8.346 7.652 7.474ZM10.197 21H2.5C1.119 21 0 19.881 0 18.5C0 17.119 1.119 16 2.5 16H8.151C8.74 16 9.298 16.259 9.678 16.708L9.925 17H12.922L11.856 18.066C11.033 18.888 10.472 19.899 10.197 21Z" fill="#636363"/>
                             </svg>
                         </div>
-                        <p class="button-panel_menyu-title">Dasturlash tillar</p>
+                        <p class="button-panel_menyu-title">Bosh sahifa</p>
                     </a>
                     <button class="bottom-panel_katalog-btn">
                     <div class="bottom-panel_icon">
@@ -160,7 +160,7 @@
                                 </defs>
                             </svg>
                         </div>
-                        <p class="button-panel_menyu-title">Bosh sahifa</p>
+                        <p class="button-panel_menyu-title">Profil</p>
                     </button>
                 </div>
             </div>
