--- a/pages/devLongues.html
+++ b/pages/devLongues.html
@@ -134,7 +134,7 @@
                     <p class="button-panel_menyu-title">Natijalar</p>
 
                 </button>
-                <button class="bottom-panel_katalog-btn">
+                <a href="./Profile.html" class="bottom-panel_katalog-btn">
                     <div class="bottom-panel_icon">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_10_156)">
