--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <div class="main-panel_top">
                         <h1 class="main-title">Terms</h1>
                         <p class="main-subtitle">Programming</p>
-                        <a class="main-btn" href="./pages/devLongues.html">Get</a>
+                        <a class="main-btn" href="./pages/Login.html">Get</a>
                     </div>
                 </div>
             </div>
