--- a/pages/devLongues.html
+++ b/pages/devLongues.html
@@ -116,7 +116,7 @@
                     </div>
                     <p class="button-panel_menyu-title">Bosh sahifa</p>
                 </button>
-                <button class="bottom-panel_katalog-btn">
+                <a href="./Resus.html" class="bottom-panel_katalog-btn">
                     <div class="bottom-panel_icon">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_129_10)">
