--- a/pages/start.html
+++ b/pages/start.html
@@ -61,7 +61,7 @@
                                     </svg>
                                 </div>
                             </a>
-                            <a href="./Test.html" class="start-card" style="background-color: #00838f; color: white;">
+                            <a href="./gametest.html" class="start-card" style="background-color: #00838f; color: white;">
                                 <div class="start-cr">
                                     <div class="start-card_icon">
                                     <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
